--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,41 @@
 ---
-# Verify this with: http://lint.travis-ci.org/
 language: ruby
-# Delete dependency locks for matrix builds.
+bundler_args: --without development system_tests
 before_install: rm Gemfile.lock || true
-script: bundle exec rake test
 rvm:
-  - 1.8.7
   - 1.9.3
+  - 2.0.0
+  - 2.1.0
+script: bundle exec rake test
 env:
-  matrix:
   - PUPPET_VERSION="~> 2.7.0"
-  - PUPPET_VERSION="~> 3.1.0"
   - PUPPET_VERSION="~> 3.2.0"
   - PUPPET_VERSION="~> 3.3.0"
   - PUPPET_VERSION="~> 3.4.0"
-  - PUPPET_VERSION="~> 3.6.0"
+  - PUPPET_VERSION="~> 3.5.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.6.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes
+  - PUPPET_VERSION="~> 3.7.0" STRICT_VARIABLES=yes FUTURE_PARSER=yes
+matrix:
+  exclude:
+  # Ruby 1.9.3
+  - rvm: 1.9.3
+    env: PUPPET_VERSION="~> 2.7.0"
+
+  # Ruby 2.0.0
+  - rvm: 2.0.0
+    env: PUPPET_VERSION="~> 2.7.0"
+
+  # Ruby 2.1.0
+  - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 2.7.0"
+  - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 3.2.0"
+  - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 3.3.0"
+  - rvm: 2.1.0
+    env: PUPPET_VERSION="~> 3.4.0"
+
 # Only notify for failed builds.
 notifications:
   email:
